--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "redux": "^4.0.1",
     "redux-saga": "^1.0.1",
     "status-js-api": "^1.2.8",
-    "web3": "^1.0.0-beta.35"
+    "web3": "1.0.0-beta.35"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=src react-scripts start",
