--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "apollo-boost": "^0.1.28",
     "axios": "^0.18.0",
     "fortmatic": "^0.3.2",
+    "graphql": "^14.1.1",
     "history": "^4.7.2",
     "react": "^16.8.2",
+    "react-apollo": "^2.4.1",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^16.8.2",
     "react-grid-gallery": "^0.4.2",
